# gguf-runner

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  test.md
.github/: dependabot.yml
.github/workflows/: pull-request.yml  push.yml  release.yml
docs/: agent-config.example.toml  downloading-models.md  features.md  image-scaling.md  module-structure.md  performance-improvement-suggestions.md  performance.md
examples/: gguf_dump.rs
regression/: .gitignore  README.md  run.sh
regression/manifests/: prompts.tsv  skip-models.txt  smoke-models.txt
src/: cli.rs  main.rs  tools.rs
src/app/: agent.rs  events.rs  generation.rs  mod.rs  repl.rs  tools.rs
src/engine/: mod.rs  profiling.rs  switches.rs  types.rs  weights.rs
src/engine/io/: gguf.rs  mod.rs
src/engine/kernels/: math.rs  mod.rs  quant.rs  sampling.rs
src/engine/multimodal/: gemma3.rs  injection.rs  mod.rs  qwen3vl.rs
src/engine/runtime/: inference.rs  mod.rs  parallel.rs
src/engine/tokenizer/: mod.rs
src/engine/vision/: mod.rs  preprocess.rs
src/model/: chat.rs  config.rs  mod.rs
src/vendors/: gemma.rs  llama.rs  mod.rs  qwen.rs  qwen2.rs  qwen3.rs  qwen35.rs  qwen3next.rs  qwen3vl.rs  qwen_common.rs
