[package]
name = "gguf-runner"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[dependencies]
rayon = "1.10"
ureq = "3"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[dev-dependencies]
tempfile = "3.13"
